--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -10,6 +10,6 @@ jobs:
       - name: Update gist
         uses: matchai/waka-box@master
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: 968220c97e8da1d047a9a480fa432e54
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: e70cc957327106d8d36bf2df5705195df99a233b
+          GIST_ID: 027ceb8d07d37039ddf03993b2cfac8d
+          WAKATIME_API_KEY: e1caedc3-598b-42a7-93b9-d6e4861f7dc0
